Fixed margin-overflow issue.

--- a/task/components/ProjectHeader/ProjectHeader.module.css
+++ b/task/components/ProjectHeader/ProjectHeader.module.css
@@ -12,6 +12,8 @@
     display: flex;
     width: 100%;
     height: 65%;
+    padding-left: 2%;
+    padding-right: 2%;
     justify-content: space-between;
     align-items: center;
 }
